--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<a href="/hi-lvl/cumulative">Cumulative Calculations</a>
     <div class="container mt-5">
         <h1 class="text-center mb-4">THC High Level Calculator</h1>
         <form id="calculatorForm">
