--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
         <h1 class="text-center mb-4">THC High Level Calculator</h1>
         <form id="calculatorForm">
             <div class="form-group">
-                <label for="volume">Volume of Smoke Inhaled (in liters):</label>
-                <input type="number" class="form-control" id="volume" name="volume" required>
+                <label for="volume">Volume of Smoke Inhaled:</label>
+                <select class="form-control" id="volumeSelect" onchange="updateVolume()">
+                    <option value="custom">Custom</option>
+                    <option value="small">Small (6.3 liters)</option>
+                    <option value="medium">Medium (12.6 liters)</option>
+                    <option value="large">Large (18.9 liters)</option>
+                </select>
+                <div id="customVolumeContainer" class="mt-2 d-none">
+                    <label for="customVolume">Enter Custom Volume (in liters):</label>
+                    <input type="number" class="form-control" id="customVolume" name="customVolume" step="0.1">
+                </div>
             </div>
 
             <div class="form-group">
