--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="number" class="form-control" id="customVolume" name="customVolume" step="0.1" min="0" placeholder="Enter custom volume">
             </div>
 
-            <!-- Other form fields remain unchanged -->
+            <!-- Other form fields -->
             <div class="form-group">
                 <label for="thcConcentration">THC Concentration in Vape Liquid (in percentage):</label>
                 <input type="number" class="form-control" id="thcConcentration" name="thcConcentration" step="0.1" min="0" max="100" required>
@@ -38,17 +38,17 @@
                 <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" required>
             </div>
 
-            <div class="form-group">
+            <div class="form-group d-none" id="strainContainer">
                 <label for="strain">Type of Strain (sativa, indica, hybrid):</label>
                 <input type="text" class="form-control" id="strain" name="strain" required>
             </div>
 
-            <div class="form-group">
+            <div class="form-group d-none" id="frequencyContainer">
                 <label for="frequency">Frequency of Use (daily, weekly, monthly):</label>
                 <input type="text" class="form-control" id="frequency" name="frequency" required>
             </div>
 
-            <div class="form-group">
+            <div class="form-group d-none" id="bodyWeightContainer">
                 <label for="bodyWeight">Body Weight (in kg):</label>
                 <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" required>
             </div>
