--- a/index.html
+++ b/index.html
@@ -37,17 +37,7 @@
                 <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" placeholder="Enter inhalation time" required>
             </div>
 
-            <div class="form-group">
-                <label for="strain">Type of Strain:</label>
-                <select class="form-control" id="strain" name="strain" required>
-                    <option value="" disabled selected>Select strain type</option>
-                    <option value="sativa">Sativa</option>
-                    <option value="indica">Indica</option>
-                    <option value="hybrid">Hybrid</option>
-                </select>
-            </div>
-
-            <div class="form-group">
+            <div class="form-group d-none" id="frequencyContainer">
                 <label for="frequency">Frequency of Use:</label>
                 <select class="form-control" id="frequency" name="frequency" required>
                     <option value="" disabled selected>Select frequency</option>
@@ -57,9 +47,19 @@
                 </select>
             </div>
 
-            <div class="form-group">
+            <div class="form-group d-none" id="bodyWeightContainer">
                 <label for="bodyWeight">Body Weight (in kg):</label>
                 <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" placeholder="Enter body weight" required>
+            </div>
+
+            <div class="form-group">
+                <label for="strain">Type of Strain:</label>
+                <select class="form-control" id="strain" name="strain" required>
+                    <option value="" disabled selected>Select strain type</option>
+                    <option value="sativa">Sativa</option>
+                    <option value="indica">Indica</option>
+                    <option value="hybrid">Hybrid</option>
+                </select>
             </div>
 
             <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
