--- a/index.html
+++ b/index.html
@@ -1,76 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THC High Level Calculator</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>THC High Level Calculator</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">THC High Level Calculator</h1>
-        <form id="calculatorForm">
-            <div class="form-group">
-                <label for="volumeSelect">Volume of Smoke Inhaled:</label>
-                <select class="form-control" id="volumeSelect" name="volumeSelect" onchange="updateVolume()" required>
-                    <option value="" disabled selected>Select an option</option>
-                    <option value="small">Small (6.3 liters)</option>
-                    <option value="medium">Medium (12.6 liters)</option>
-                    <option value="large">Large (18.9 liters)</option>
-                    <option value="custom">Custom</option>
-                </select>
-            </div>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">THC High Level Calculator</h1>
+        <form id="calculatorForm">
+            <div class="form-group">
+                <label for="volume">Volume of Smoke Inhaled (in liters):</label>
+                <input type="number" class="form-control" id="volume" name="volume" required>
+            </div>
 
-            <div class="form-group d-none" id="customVolumeContainer">
-                <label for="customVolume">Custom Volume (in liters):</label>
-                <input type="number" class="form-control" id="customVolume" name="customVolume" step="0.1" min="0" placeholder="Enter custom volume">
-            </div>
+            <div class="form-group">
+                <label for="thcConcentration">THC Concentration in Vape Liquid (in percentage):</label>
+                <input type="number" class="form-control" id="thcConcentration" name="thcConcentration" step="0.1" min="0" max="100" required>
+            </div>
 
-            <div class="form-group">
-                <label for="thcConcentration">THC Concentration in Smoke (in percentage):</label>
-                <input type="number" class="form-control" id="thcConcentration" name="thcConcentration" step="0.1" min="0" max="100" placeholder="Enter THC concentration" required>
-            </div>
+            <div class="form-group">
+                <label for="inhalationTime">Inhalation Time (in seconds):</label>
+                <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" required>
+            </div>
 
-            <div class="form-group">
-                <label for="inhalationTime">Inhalation Time (in seconds):</label>
-                <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" placeholder="Enter inhalation time" required>
-            </div>
+            <div class="form-group">
+                <label for="strain">Type of Strain (sativa, indica, hybrid):</label>
+                <input type="text" class="form-control" id="strain" name="strain" required>
+            </div>
 
-            <div class="form-group d-none" id="frequencyContainer">
-                <label for="frequency">Frequency of Use:</label>
-                <select class="form-control" id="frequency" name="frequency" required>
-                    <option value="" disabled selected>Select frequency</option>
-                    <option value="daily">Daily</option>
-                    <option value="weekly">Weekly</option>
-                    <option value="monthly">Monthly</option>
-                </select>
-            </div>
+            <div class="form-group">
+                <label for="frequency">Frequency of Use (daily, weekly, monthly):</label>
+                <input type="text" class="form-control" id="frequency" name="frequency" required>
+            </div>
 
-            <div class="form-group d-none" id="bodyWeightContainer">
-                <label for="bodyWeight">Body Weight (in kg):</label>
-                <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" placeholder="Enter body weight" required>
-            </div>
+            <div class="form-group">
+                <label for="bodyWeight">Body Weight (in kg):</label>
+                <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" required>
+            </div>
 
-            <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
-        </form>
+            <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
+        </form>
 
-        <hr>
+        <hr>
 
-        <div id="sessions" class="mt-4">
-            <!-- Sessions will be dynamically added here -->
-        </div>
+        <div id="sessions" class="mt-4">
+            <!-- Sessions will be dynamically added here -->
+        </div>
 
-        <hr>
+        <hr>
 
-        <div id="result" class="mt-4"></div>
-    </div>
+        <div id="result" class="mt-4"></div>
+    </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Your custom JavaScript -->
-    <script src="script.js"></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Your custom JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
