--- a/index.html
+++ b/index.html
@@ -3,70 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THC High Level Calculator</title>
+    <title>Cumulative High Level Calculator</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 20px;
+        }
+        .result {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">THC High Level Calculator</h1>
-        <form id="calculatorForm">
-            <div class="form-group">
-                <label for="measurementMethod">Measurement Method:</label>
-                <select class="form-control" id="measurementMethod" name="measurementMethod" onchange="toggleMeasurementFields()" required>
-                    <option value="litersSeconds">Liters and Seconds</option>
-                    <option value="blinkers">Blinkers</option>
-                </select>
+    <div class="container">
+        <h1 class="text-center">Cumulative High Level Calculator</h1>
+        <form id="calc-form">
+            <div class="mb-3">
+                <label for="volume" class="form-label">Volume of Smoke Inhaled (liters):</label>
+                <input type="number" class="form-control" id="volume" required>
             </div>
-
-            <div id="litersSecondsFields" class="form-group">
-                <label for="volume">Volume of Smoke Inhaled:</label>
-                <select class="form-control" id="volume" name="volume" onchange="toggleCustomVolume()" required>
-                    <option value="6.3">Small (6.3 liters)</option>
-                    <option value="12.6">Medium (12.6 liters)</option>
-                    <option value="18.9">Large (18.9 liters)</option>
-                    <option value="custom">Custom</option>
-                </select>
-                <div id="customVolumeField" class="mt-2" style="display: none;">
-                    <label for="customVolume">Enter Custom Volume (in liters):</label>
-                    <input type="number" class="form-control" id="customVolume" name="customVolume" step="0.1">
-                </div>
-
-                <div class="form-group mt-2">
-                    <label for="inhalationTime">Inhalation Time (in seconds):</label>
-                    <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" required>
-                </div>
+            <div class="mb-3">
+                <label for="thc_concentration" class="form-label">THC Concentration (decimal):</label>
+                <input type="number" step="0.01" class="form-control" id="thc_concentration" required>
             </div>
-
-            <div id="blinkersField" class="form-group" style="display: none;">
-                <label for="blinkers">Number of Blinkers:</label>
-                <input type="number" class="form-control" id="blinkers" name="blinkers" min="1" required>
+            <div class="mb-3">
+                <label for="strain_factor" class="form-label">Strain Factor:</label>
+                <input type="number" step="0.01" class="form-control" id="strain_factor" required>
             </div>
-
-            <div class="form-group">
-                <label for="bodyWeight">Body Weight (in lbs):</label>
-                <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" required>
+            <div class="mb-3">
+                <label for="body_weight" class="form-label">Body Weight (kg):</label>
+                <input type="number" class="form-control" id="body_weight" required>
             </div>
-
-            <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
+            <div class="mb-3">
+                <label for="lung_capacity" class="form-label">Lung Capacity (liters):</label>
+                <input type="number" class="form-control" id="lung_capacity" required>
+            </div>
+            <div class="mb-3">
+                <label for="decay_constant" class="form-label">Decay Constant:</label>
+                <input type="number" step="0.0001" class="form-control" id="decay_constant" value="0.3466" required>
+            </div>
+            <div class="mb-3">
+                <label for="inhalation_time" class="form-label">Inhalation Time (seconds):</label>
+                <input type="number" class="form-control" id="inhalation_time" required>
+            </div>
+            <div class="mb-3 text-center">
+                <button type="submit" class="btn btn-primary">Calculate</button>
+            </div>
+            <div class="mb-3 text-center">
+                <button type="button" class="btn btn-secondary" onclick="clearHistory()">Clear History</button>
+            </div>
         </form>
-
-        <hr>
-
-        <div id="sessions" class="mt-4">
-            <!-- Sessions will be dynamically added here -->
+        <div class="text-center">
+            <p class="result" id="cumulative_high_level">Cumulative High Level: 0</p>
         </div>
-
-        <hr>
-
-        <div id="result" class="mt-4"></div>
     </div>
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Custom JavaScript -->
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS for calculation and localStorage -->
+    <script>
+        // Function to calculate the cumulative high level
+        function calculateCumulativeHighLevel(volume, thc_concentration, strain_factor, body_weight, lung_capacity, decay_constant, inhalation_time) {
+            let thc_amount = (volume * thc_concentration * strain_factor) / (body_weight * lung_capacity);
+            let cumulative_high_level = thc_amount * (1 - Math.exp(-decay_constant * inhalation_time)) * 1426.2893370607;
+            return cumulative_high_level;
+        }
+
+        // Event listener for form submission
+        document.getElementById('calc-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            let volume = parseFloat(document.getElementById('volume').value);
+            let thc_concentration = parseFloat(document.getElementById('thc_concentration').value);
+            let strain_factor = parseFloat(document.getElementById('strain_factor').value);
+            let body_weight = parseFloat(document.getElementById('body_weight').value);
+            let lung_capacity = parseFloat(document.getElementById('lung_capacity').value);
+            let decay_constant = parseFloat(document.getElementById('decay_constant').value);
+            let inhalation_time = parseFloat(document.getElementById('inhalation_time').value);
+
+            let cumulative_high_level = calculateCumulativeHighLevel(volume, thc_concentration, strain_factor, body_weight, lung_capacity, decay_constant, inhalation_time);
+
+            // Retrieve previous cumulative high level from localStorage
+            let previous_high_level = parseFloat(localStorage.getItem('cumulative_high_level')) || 0;
+            cumulative_high_level += previous_high_level;
+
+            // Update the result on the page
+            document.getElementById('cumulative_high_level').textContent = `Cumulative High Level: ${cumulative_high_level.toFixed(2)}`;
+
+            // Store the updated cumulative high level in localStorage
+            localStorage.setItem('cumulative_high_level', cumulative_high_level);
+        });
+
+        // Function to clear history
+        function clearHistory() {
+            localStorage.removeItem('cumulative_high_level');
+            document.getElementById('cumulative_high_level').textContent = 'Cumulative High Level: 0';
+        }
+
+        // Initialize the cumulative high level on page load
+        window.onload = function() {
+            let stored_high_level = parseFloat(localStorage.getItem('cumulative_high_level')) || 0;
+            document.getElementById('cumulative_high_level').textContent = `Cumulative High Level: ${stored_high_level.toFixed(2)}`;
+        };
+    </script>
 </body>
 </html>
