--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cumulative High Level Calculator</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 20px;
-        }
-        .result {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -25,8 +15,34 @@
                 <input type="number" class="form-control" id="volume" required>
             </div>
             <div class="mb-3">
-                <label for="body_weight" class="form-label">Body Weight (kg):</label>
+                <label for="body_weight" class="form-label">Body Weight (pounds):</label>
                 <input type="number" class="form-control" id="body_weight" required>
+            </div>
+            <div class="mb-3">
+                <label for="sex" class="form-label">Sex:</label>
+                <select class="form-select" id="sex" required>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="hrt" class="form-label">On HRT (Hormone Replacement Therapy)?</label>
+                <select class="form-select" id="hrt" required>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="height_ft" class="form-label">Height (ft):</label>
+                <input type="number" class="form-control" id="height_ft" required>
+            </div>
+            <div class="mb-3">
+                <label for="height_in" class="form-label">Height (in):</label>
+                <input type="number" class="form-control" id="height_in" required>
+            </div>
+            <div class="mb-3">
+                <label for="age" class="form-label">Age:</label>
+                <input type="number" class="form-control" id="age" required>
             </div>
             <div class="mb-3">
                 <label for="inhalation_time" class="form-label">Inhalation Time (seconds):</label>
@@ -44,8 +60,6 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
