--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <button type="submit" class="btn btn-primary">Calculate</button>
             </div>
             <div class="mb-3 text-center">
+                <button type="button" class="btn btn-secondary" id="recalculate-button">Recalculate with Decay</button>
+            </div>
+            <div class="mb-3 text-center">
                 <button type="button" class="btn btn-secondary" onclick="clearHistory()">Clear History</button>
             </div>
         </form>
