--- a/index.html
+++ b/index.html
@@ -21,29 +21,17 @@
             </div>
             <div class="mb-3">
                 <label for="sex" class="form-label">Sex:</label>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="sex-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select Sex
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="sex-dropdown">
-                        <a class="dropdown-item" href="#" data-value="male">Male</a>
-                        <a class="dropdown-item" href="#" data-value="female">Female</a>
-                    </div>
-                    <input type="hidden" id="sex" name="sex" value="">
-                </div>
+                <select class="form-control" id="sex" name="sex">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="hrt" class="form-label">On HRT (Hormone Replacement Therapy)?</label>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="hrt-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select HRT
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="hrt-dropdown">
-                        <a class="dropdown-item" href="#" data-value="yes">Yes</a>
-                        <a class="dropdown-item" href="#" data-value="no">No</a>
-                    </div>
-                    <input type="hidden" id="hrt" name="hrt" value="">
-                </div>
+                <select class="form-control" id="hrt" name="hrt">
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="height_ft" class="form-label">Height (ft):</label>
@@ -76,6 +64,8 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="script.js"></script>
