--- a/index.html
+++ b/index.html
@@ -12,40 +12,12 @@
         <h1 class="text-center mb-4">THC High Level Calculator</h1>
         <form id="calculatorForm">
             <div class="form-group">
-                <label for="measurementMethod">Measurement Method:</label>
-                <select class="form-control" id="measurementMethod" name="measurementMethod" onchange="toggleMeasurementFields()" required>
-                    <option value="litersSeconds">Liters and Seconds</option>
-                    <option value="blinkers">Blinkers</option>
-                </select>
+                <label for="heldInTime">Held In Time (in seconds):</label>
+                <input type="number" class="form-control" id="heldInTime" name="heldInTime" required>
             </div>
-
-            <div id="litersSecondsFields" class="form-group">
-                <label for="volume">Volume of Smoke Inhaled:</label>
-                <select class="form-control" id="volume" name="volume" onchange="toggleCustomVolume()" required>
-                    <option value="6.3">Small (6.3 liters)</option>
-                    <option value="12.6">Medium (12.6 liters)</option>
-                    <option value="18.9">Large (18.9 liters)</option>
-                    <option value="custom">Custom</option>
-                </select>
-                <div id="customVolumeField" class="mt-2" style="display: none;">
-                    <label for="customVolume">Enter Custom Volume (in liters):</label>
-                    <input type="number" class="form-control" id="customVolume" name="customVolume" step="0.1">
-                </div>
-
-                <div class="form-group mt-2">
-                    <label for="inhalationTime">Inhalation Time (in seconds):</label>
-                    <input type="number" class="form-control" id="inhalationTime" name="inhalationTime" required>
-                </div>
-            </div>
-
-            <div id="blinkersField" class="form-group" style="display: none;">
-                <label for="blinkers">Number of Blinkers:</label>
-                <input type="number" class="form-control" id="blinkers" name="blinkers" min="1" required>
-            </div>
-
             <div class="form-group">
-                <label for="bodyWeight">Body Weight (in lbs):</label>
-                <input type="number" class="form-control" id="bodyWeight" name="bodyWeight" step="0.1" required>
+                <label for="suckingTime">Sucking Time (in seconds):</label>
+                <input type="number" class="form-control" id="suckingTime" name="suckingTime" required>
             </div>
 
             <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
