--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
         <h1 class="text-center mb-4">THC High Level Calculator</h1>
         <form id="calculatorForm">
             <div class="form-group">
-                <label for="heldInTime">Held In Time (in seconds):</label>
-                <input type="number" class="form-control" id="heldInTime" name="heldInTime" required>
+                <label for="height">Height (in meters):</label>
+                <input type="number" class="form-control" id="height" name="height" required>
+            </div>
+            <div class="form-group">
+                <label for="weight">Weight (in kg):</label>
+                <input type="number" class="form-control" id="weight" name="weight" required>
             </div>
             <div class="form-group">
                 <label for="suckingTime">Sucking Time (in seconds):</label>
                 <input type="number" class="form-control" id="suckingTime" name="suckingTime" required>
+            </div>
+            <div class="form-group">
+                <label for="heldInTime">Held In Time (in seconds):</label>
+                <input type="number" class="form-control" id="heldInTime" name="heldInTime" required>
             </div>
 
             <button type="button" class="btn btn-primary btn-block" onclick="addSession()">Add Session</button>
